Story #15708: Replace mongodb-quartz with standard JDBC connector
- Mongodb-quartz lib is no more maintained + has too many bugs (jobs are
run concurrently is they take too long, heartbeat fail-over occurs after
a 7.5s clock shift...)
- For now, we're providing 2 mode :
  - H2DB local db mode (non clustered mode only)
  - Postgres (require external postresql instance, unofficial support)